apps/network-system/pihole/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: pihole
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-admin
      namespace: network-system
      sectionName: https
  hostnames:
    - pihole.admin.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          port: 80
